# eacp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  DCOMP-PORT-STATUS.md  LICENSE  README.md  WINDOWS_WINDOWING_CLEANUP_PLAN.md  justfile  review-findings.md  torender.txt
Apps/: CMakeLists.txt  Main.cpp  Main.mm
Apps/BasicHTTP/: CMakeLists.txt  Main.cpp
Apps/Camera/CameraViewDemo/: Info.plist.in  Main.cpp
Apps/ComplexGUI/: TaskBoard.cpp
Apps/Console/: CMakeLists.txt  Main.cpp  Main.mm
Apps/DebugWinGraphics/: CMakeLists.txt  main.cpp
Apps/EmbeddedPopups/: Main.cpp
Apps/GPU/: CMakeLists.txt
Apps/GPU/Blending/: CMakeLists.txt  Main.cpp
Apps/GPU/Compute/: Main.cpp
Apps/GPU/Instancing/: Main.cpp
Apps/GPU/Maze/: Main.cpp
Apps/GPU/Teapot/: Main.cpp
Apps/GPU/Triangle/: Main.cpp
Apps/GUI/: CMakeLists.txt  Main.cpp
Apps/Graphics/: CMakeLists.txt
Apps/Graphics/GUI/: Main.cpp
Apps/Graphics/IpcDemo/: CMakeLists.txt  Main.cpp
Apps/Graphics/KeyInspector/: Main.cpp
Apps/Graphics/TrayApp/: Api.h  BRIEF.md  CMakeLists.txt  Clipboard-Windows.cpp  Clipboard-macOS.mm  Clipboard.h  Main.cpp  Types.h
Apps/HTTP/: CMakeLists.txt  Main.cpp
Apps/HttpRpcDemo/: client.ts  server.ts
Apps/HttpServer/: CMakeLists.txt  Main.cpp
Apps/Mixed/LayeredViews/: Main.cpp
Apps/Mixed/MixedViews/: Main.cpp
Apps/Network/: CMakeLists.txt
Apps/Network/HttpRpcDemo/: Schema.h
Apps/Network/TcpClient/: Main.cpp  run.sh
Apps/Network/TcpProbe/: CMakeLists.txt  Main.cpp  run.sh
Apps/Network/TcpServer/: Main.cpp
Apps/Plugins/DemoPlugin/: CMakeLists.txt  Plugin.cpp
Apps/Plugins/PluginHost/: CMakeLists.txt  Main.cpp
Apps/ResourcesEmbed/: CMakeLists.txt  Main.cpp
Apps/SVG/: CMakeLists.txt  Main.cpp
Apps/SVG/SVG/: CMakeLists.txt  Main.cpp
Apps/SimpleView/: CMakeLists.txt  Content.hpp  Main.cpp
Apps/System/: CMakeLists.txt
Apps/System/AppHub/: AppHubApi.h  AppHubInfo.plist.in  CMakeLists.txt  Main.cpp  PrivilegedHelperClient-Unsupported.cpp  PrivilegedHelperClient-macOS.mm  PrivilegedHelperClient.h
Apps/System/AppHub/PrivilegedHelper/: Info.plist.in  LaunchDaemon.plist.in  Main.cpp
Apps/System/RealUpdateDemo/: CMakeLists.txt  Info.plist.in  Main.cpp
Apps/Terminal/Terminal/: AppShell.cpp  AppShell.h  CMakeLists.txt  Main.cpp  Pty.h  TrayController.cpp
Apps/Todo/: Main.cpp
Apps/WebView/: CMakeLists.txt
Apps/WebView/Browser/: Browser.rc  CMakeLists.txt  Main.cpp
Apps/WebView/FancyWindow/: Main.cpp
Apps/WebView/WebViewAsyncJobs/: App.h  CMakeLists.txt  Types.h
Apps/WebView/WebViewAsyncJobs/Tests/: CMakeLists.txt  WebViewAsyncJobsTests.cpp
Apps/WebView/WebViewAsyncJobs/web/: index.html  package.json
Apps/WebView/WebViewDragOut/: Main.cpp
Apps/WebView/WebViewEmbed/: Types.h
Apps/WebView/WebViewReactAnim/: Types.h
Apps/WebView/WebViewSubApi/: App.h
Apps/WebView/WebViewTodo/: CMakeLists.txt
Apps/WebView/WebViewTodo/Tests/: WebViewTodoTests.cpp
Apps/WebView/WebViewTodo/tests-node/: eacp-test-node.ts  package-lock.json  package.json  playwright.config.ts
Apps/WebViewEmbed/: CMakeLists.txt  Commands.cpp  Commands.h  Main.cpp  Registrations.cpp  Types.h
Apps/WebViewEmbed/web/: index.html  main.js  package-lock.json  package.json  vite.config.ts
Apps/WebViewEmbed/web/src/: main.ts  style.css
Apps/WebViewReactAnim/: Commands.cpp  Main.cpp
Apps/WebViewReactAnim/web/src/: App.jsx  ShaderCanvas.jsx  bridge.js
Apps/WebViewTodo/: Commands.cpp
Apps/WebViewTodo/web/src/: store.ts
Lib/eacp/Core/: CMakeLists.txt  Core-Windows.cpp  Core-iOS.mm  Core-macOS.mm  Core.cpp  Core.h  Core.mm
Lib/eacp/Core/App/: App-Linux.cpp  App-Windows-FilePicker.h  App-Windows.cpp  App-iOS.mm  App-macOS.mm  App.cpp  App.h  AppEnvironment.h  Clipboard-Linux.cpp  Clipboard-Windows.cpp  Clipboard-iOS.mm  Clipboard-macOS.mm  Clipboard.h  LoginItem-Windows.cpp  LoginItem-macOS.mm  LoginItem.h
Lib/eacp/Core/Network/: Http-Windows.cpp  Http.cpp  Http.h  Http.mm
Lib/eacp/Core/ObjC/: AutoReleasePool.h  CFRef.h  ObjC.h  RuntimeClass.h  Strings.h  Strings.mm
Lib/eacp/Core/Platform/: Platform.cpp  Platform.h
Lib/eacp/Core/Plugins/: DynamicLibrary-Posix.cpp  DynamicLibrary-Windows.cpp  DynamicLibrary.h  ModuleInfo-Apple.cpp  ModuleInfo-Linux.cpp  ModuleInfo-Posix.cpp  ModuleInfo-Windows.cpp  ModuleInfo.h
Lib/eacp/Core/Process/: Process-Windows.cpp  Process-iOS.cpp  Process.cpp  Process.h
Lib/eacp/Core/Shell/: Shell.h  Shell.mm
Lib/eacp/Core/Threads/: Async.cpp  Async.h  DisplayLink-iOS.mm  DisplayLink.mm  EventLoop-Linux.cpp  EventLoop-Windows.cpp  EventLoop-iOS.mm  EventLoop-macOS.mm  EventLoop.cpp  EventLoop.h  EventLoop.mm  (+9 more)
Lib/eacp/Graphics/: CMakeLists.txt  Common-Windows.h  Common.h  Composition-Windows.h  D2D-Windows.h  DComp-Windows.h  Font.h  Font.mm  Graphics-MacOS.mm  Graphics-Windows.cpp  Graphics-iOS.mm  Graphics.cpp  Graphics.h  Graphics.mm  GraphicsContext.h  MacGraphicUtils.h  MacGraphicUtils.mm  MacGraphicsContext.h  MacGraphicsContext.mm  Path.h  Path.mm  Primitives.h  ShapeLayer.h  ShapeLayer.mm  TextLayer.h  TextLayer.mm  View.h  View.mm  Window.h  Window.mm
Lib/eacp/Network/: CMakeLists.txt  Common-Posix.h  Common.h  Http.cpp  Http.h  Http.mm  Network.h
Lib/eacp/ResourceEmbed/: CMakeLists.txt  ResourceEmbed.cpp  ResourceEmbed.h
Lib/eacp/SIMD/: Backends.h  CMakeLists.txt  Common.h  Ops.h  SIMD.h
Lib/eacp/SVG/: CMakeLists.txt  Common.h  NumberReader.cpp  NumberReader.h  SVG.cpp  SVG.h  SVGAttributes.cpp  SVGAttributes.h  SVGBuilder.cpp  SVGBuilder.h  SVGElement.h  SVGImage.cpp  SVGImage.h  SVGParser.cpp  SVGParser.h  SVGPathParser.cpp  SVGPathParser.h  SVGShapes.cpp  SVGShapes.h  XMLParser.cpp  XMLParser.h
Lib/eacp/Server/: CMakeLists.txt  HttpServer.h
Lib/eacp/Updater/: CMakeLists.txt  Updater.cpp  Updater.h
Lib/eacp/WebView/: CMakeLists.txt  Common.h  WebView-Windows.cpp  WebView.cpp  WebView.h  WebView.mm
Tests/GPU/: CMakeLists.txt  GPUSmokeTests.cpp  GPUSnapshotTests.cpp  ShaderCodegenTests.cpp
Tests/ObjC/: CMakeLists.txt  ObjCPtrTests.mm
Tests/SIMD/: CMakeLists.txt  SimdBench.cpp  SimdTests.cpp
(+412 files in other folders)
