add_subdirectory(Console)
add_subdirectory(HTTP)
add_subdirectory(BasicHTTP)
add_subdirectory(HttpServer)

if (APPLE OR WIN32)
    add_subdirectory(GUI)
    add_subdirectory(ComplexGUI)
    add_subdirectory(Todo)
    add_subdirectory(SimpleView)
    add_subdirectory(SVG)
    add_subdirectory(EmbeddedViewDemo)
    add_subdirectory(WebViewEmbed)
    add_subdirectory(EmbeddedPopups)
endif ()